profile page + scrapper

--- a/views/403page.njk
+++ b/views/403page.njk
@@ -1,5 +1,5 @@
 {% set title = "403" %}
-{% set username = data.username %}
+{# {% set username = data.username %} #}
 
 {% extends "./_layout.njk" %}
 
