--- a/views/firstPageLoggedin.njk
+++ b/views/firstPageLoggedin.njk
@@ -1,4 +1,4 @@
-{% set title = "Welcome {{ data.username }}" %}
+{% set title = "Welcome " + data.username %}
 {% set username = data.username %}
 
 {% extends "./_layout.njk" %}
