--- a/views/pageJobs.njk
+++ b/views/pageJobs.njk
@@ -72,59 +72,18 @@
 </div>
 
 <div class="grid-container">
-    <div class="grid grid-item1">
-        <img src="/resources/firme/Yonder.png" name="firma">
-        <h1 class="jobtitle">FRONT-END DEVELOPER (REACT), MID/SENIOR LEVEL, CLUJ-NAPOCA</h1>
-        <p class="jobdescription">You will be working with React, 
-            Redux and NodeJS on a generic business process automation tool. 
-            The challenges of this project is the generic nature of its business 
-            logic and the fact that you need to optimize the application to work
-                with big datasets. It’s a challenge to the thought process of 
-                programming because usually we work 
-            on specific features that will have a certain result.</p>
-        <button type="submit" class="view">View details</button>
-    </div>
-    <div class="grid grid-item2">
-            <img src="/resources/firme/Conti.png" name="firma">
-            <h1 class="jobtitle">QA Automation Engineer for Mobile Devices</h1>
-            <p class="jobdescription">You will have the opportunity to contribute to the 
-                development and delivery of our next-generation 
-                Bitdefender Parental Advisor ecosystem.</p>
-            <button type="submit" class="view">View details</button>
-            
-    </div>
-    <div class="grid grid-item3"><img src="/resources/firme/amazon.png" name="firma">
-        <h1 class="jobtitle">Junior Software Developer (Based in Luxembourg)</h1>
-        <p class="jobdescription">The ideal candidate must be detail oriented, 
-            have superior verbal and written communication skills, strong 
-            organizational skills, able to juggle multiple tasks at once, able 
-            to work independently and can maintain professionalism under pressure. </p>
-        <button type="submit" class="view">View details</button>
-    </div>
-
-    <div class="grid grid-item4"><img src="/resources/firme/Bit.png" name="firma">
-        <h1 class="jobtitle">C/C++ Developer (Linux; Networking)-Core Security Team</h1>
-        <p class="jobdescription">We are currently working on IDS/IPS technologies, with custom hardware, running on an embedded OS, as well as new 
-            security strategies and applications powered by our cloud services.</p>
-        <button type="submit" class="view">View details</button>
-    </div>
-
-    <div class="grid grid-item5"><img src="/resources/firme/veoneer.png" name="firma">
-        <h1 class="jobtitle">Design Lead for Vision Systems
-                Vision/Night Vision Systems – Veoneer Timisoara</h1>
-        <p class="jobdescription">The Design Lead is responsible for all the technical aspects of the defined set of products </p>
-        <button type="submit" class="view">View details</button>
-    </div>
-    
-    <div class="grid grid-item6"><img src="/resources/firme/cgm.png" name="firma">
-        <h1 class="jobtitle">System Engineer</h1>
-        <p class="jobdescription">The Systems Engineer is responsible for supporting server 
-            and platform installations. This individual also installs server hardware 
-            and operating systems as well as reviews/researches server system solutions
-                using current and emerging technologies. 
-            The Systems Engineer assists in training less experienced personnel.</p>
-        <button type="submit" class="view">View details</button>
-    </div> 
+	{% set i = 1 %}
+	{% for el in data.jobsInfo %}
+		<div class="grid grid-item{{ i }}">
+			<img src="{{ el.logo }}" name="firma">
+			<h1 class="jobtitle">{{ el.title }}, {{ el.date }}, {{ el.city }}</h1>
+			<p class="jobdescription">{{ el.description }}</p>
+			<form action="{{ el.website }}">
+				<button type="submit" class="view">View details</button>
+			</form>
+		</div>
+	{% set i = i + 1 %}
+	{% endfor %}
 </div>
 
 <div>
