--- a/views/pageProfile.njk
+++ b/views/pageProfile.njk
@@ -74,15 +74,15 @@ Chart.defaults.global.defaultFontSize = 18;
 Chart.defaults.global.defaultFontColor = '#000';
 
 var skillChart = new Chart(myChart, {
-type: 'bar',
+type: 'pie',
 data:{
-    labels:[{{ data.githubLanguages[0].name }},{{ data.githubLanguages[1].name }},{{ data.githubLanguages[2].name }}],
+    labels:["{{ data.githubLanguages[0].name }}", "{{ data.githubLanguages[1].name }}", "{{ data.githubLanguages[2].name }}"],
     datasets:[{
         label:'Language',
         data:[
             {{ data.githubLanguages[0].val }},
-            {{ data.githubLanguages[1].val }},
-           {{ data.githubLanguages[2].val }}
+			{{ data.githubLanguages[1].val }},
+			{{ data.githubLanguages[2].val }}
         ],
         backgroundColor:[
             'rgba(255, 99, 132, 0.6)',
